Clean code (#732)
* Clean code in diagram-test
* Clean code in diagram-utils
* Clean code in SLD-core
* Rename tests
* Code cleaning in SLD-CGMES-dl-conversion
* Code cleaning in SLD-CGMES-dl-iidm-extension
* Code cleaning in SLD-CGMES-layout
* fix imports
* Clean code in NAD
* Replace this instanceof check
* Clean switches

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>