@@ -98,7 +98,10 @@ public class SvgWriter {
     }
 
     public void writeSvg(Graph graph, Writer svgWriter) {
-        try (WriterOutputStream svgOs = new WriterOutputStream(svgWriter, StandardCharsets.UTF_8)) {
+        try (WriterOutputStream svgOs = WriterOutputStream.builder()
+            .setWriter(svgWriter)
+            .setCharset(StandardCharsets.UTF_8)
+            .get()) {
             writeSvg(graph, svgOs);
         } catch (IOException e) {
             throw new UncheckedIOException(e);
@@ -202,8 +205,8 @@ public class SvgWriter {
         writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
         double radius = svgParameters.getInjectionCircleRadius();
         Point circleCenter = injection.getInjectionPoint().atDistance(-radius, injection.getBusNodePoint());
-        writer.writeAttribute("cx", getFormattedValue(circleCenter.getX()));
-        writer.writeAttribute("cy", getFormattedValue(circleCenter.getY()));
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.x()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.y()));
         writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(radius));
 
         insertSvgComponent(injection, writer);
@@ -318,7 +321,7 @@ public class SvgWriter {
             points.add(line2.get(1).atDistance(halfWidth, line2.get(0)));
         }
         String lineFormatted = points.stream()
-                .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
+                .map(point -> getFormattedValue(point.x()) + "," + getFormattedValue(point.y()))
                 .collect(Collectors.joining(" "));
         writer.writeAttribute(POINTS_ATTRIBUTE, lineFormatted);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.HVDC_CLASS);
@@ -358,7 +361,7 @@ public class SvgWriter {
             return;
         }
         if (edge.isVisible(side)) {
-            if (!graph.isLoop(edge)) {
+            if (graph.isNotALoop(edge)) {
                 drawHalfEdge(writer, edge, side);
             } else {
                 drawLoopEdge(writer, edge, side);
@@ -375,7 +378,7 @@ public class SvgWriter {
     }
 
     private void drawHighlightHalfEdge(Graph graph, XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
-        if (edge.isVisible(side) && !graph.isLoop(edge)) {
+        if (edge.isVisible(side) && graph.isNotALoop(edge)) {
             drawHighlightHalfEdge(writer, edge, side);
         }
     }
@@ -403,12 +406,12 @@ public class SvgWriter {
 
     private String getPolylinePointsString(List<Point> points) {
         return points.stream()
-                .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
+                .map(point -> getFormattedValue(point.x()) + "," + getFormattedValue(point.y()))
                 .collect(Collectors.joining(" "));
     }
 
     private String getLoopPathString(BranchEdge edge, BranchEdge.Side side) {
-        Object[] points = edge.getPoints(side).stream().flatMap(p -> Stream.of(p.getX(), p.getY())).toArray();
+        Object[] points = edge.getPoints(side).stream().flatMap(p -> Stream.of(p.x(), p.y())).toArray();
         return String.format(Locale.US, "M%.2f,%.2f L%.2f,%.2f C%.2f,%.2f %.2f,%.2f %.2f,%.2f", points);
     }
 
@@ -440,7 +443,7 @@ public class SvgWriter {
     }
 
     private void drawThreeWtNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
-        List<ThreeWtNode> threeWtNodes = graph.getThreeWtNodesStream().collect(Collectors.toList());
+        List<ThreeWtNode> threeWtNodes = graph.getThreeWtNodesStream().toList();
         if (threeWtNodes.isEmpty()) {
             return;
         }
@@ -452,7 +455,7 @@ public class SvgWriter {
             writeId(writer, threeWtNode);
             writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(threeWtNode.getPosition()));
             writeStyleClasses(writer, styleProvider.getNodeStyleClasses(threeWtNode));
-            List<ThreeWtEdge> edges = graph.getThreeWtEdgeStream(threeWtNode).collect(Collectors.toList());
+            List<ThreeWtEdge> edges = graph.getThreeWtEdgeStream(threeWtNode).toList();
             for (ThreeWtEdge edge : edges) {
                 draw3WtWinding(edge, threeWtNode, writer);
                 if (ThreeWtEdge.PST_EDGE.equals(edge.getType())) {
@@ -470,8 +473,8 @@ public class SvgWriter {
         writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
         writeStyleClasses(writer, styleProvider.getThreeWtEdgeStyleClasses(edge), StyleProvider.WINDING_CLASS);
         writeStyleAttribute(writer, styleProvider.getThreeWtEdgeStyle(edge));
-        writer.writeAttribute("cx", getFormattedValue(circleCenter.getX() - threeWtNode.getX()));
-        writer.writeAttribute("cy", getFormattedValue(circleCenter.getY() - threeWtNode.getY()));
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.x() - threeWtNode.getX()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.y() - threeWtNode.getY()));
         writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(svgParameters.getTransformerCircleRadius()));
     }
 
@@ -488,7 +491,7 @@ public class SvgWriter {
 
         double radius = svgParameters.getTransformerCircleRadius();
         Point circleCenter = edge.getPoints().get(1).atDistance(radius, threeWtNode.getPosition());
-        Point p = new Point(circleCenter.getX() - threeWtNode.getX(), circleCenter.getY() - threeWtNode.getY());
+        Point p = new Point(circleCenter.x() - threeWtNode.getX(), circleCenter.y() - threeWtNode.getY());
         double[] matrix = getTransformMatrix(arrowSize, arrowSize, rotationAngle, p);
 
         writer.writeEmptyElement(PATH_ELEMENT_NAME);
@@ -503,7 +506,7 @@ public class SvgWriter {
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.EDGE_INFOS_CLASS);
 
         for (BranchEdge edge : graph.getBranchEdges()) {
-            if (!graph.isLoop(edge)) {
+            if (graph.isNotALoop(edge)) {
                 drawBranchEdgeInfo(writer, edge, BranchEdge.Side.ONE);
                 drawBranchEdgeInfo(writer, edge, BranchEdge.Side.TWO);
             } else {
@@ -731,8 +734,8 @@ public class SvgWriter {
     }
 
     private double[] getTransformMatrix(double width, double height, double angle, Point center) {
-        double centerPosX = center.getX();
-        double centerPosY = center.getY();
+        double centerPosX = center.x();
+        double centerPosY = center.y();
 
         double cosRo = Math.cos(angle);
         double sinRo = Math.sin(angle);
@@ -750,12 +753,12 @@ public class SvgWriter {
         writeStyleClasses(writer, styleProvider.getSideEdgeStyleClasses(edge, side), StyleProvider.WINDING_CLASS);
         writeStyleAttribute(writer, styleProvider.getSideEdgeStyle(edge, side));
         List<Point> halfPoints = edge.getPoints(side);
-        Point point1 = halfPoints.get(halfPoints.size() - 1); // point near 2wt
+        Point point1 = halfPoints.getLast(); // point near 2wt
         Point point2 = halfPoints.get(halfPoints.size() - 2); // point near voltage level, or control point for loops
         double radius = svgParameters.getTransformerCircleRadius();
         Point circleCenter = point1.atDistance(-radius, point2);
-        writer.writeAttribute("cx", getFormattedValue(circleCenter.getX()));
-        writer.writeAttribute("cy", getFormattedValue(circleCenter.getY()));
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.x()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.y()));
         writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(radius));
     }
 
@@ -765,7 +768,7 @@ public class SvgWriter {
 
         List<Point> points1 = edge.getPoints1();
         List<Point> points2 = edge.getPoints2();
-        Point middle = Point.createMiddlePoint(points1.get(points1.size() - 1), points2.get(points2.size() - 1));
+        Point middle = Point.createMiddlePoint(points1.getLast(), points2.getLast());
         double[] matrix = getTransformMatrix(arrowSize, arrowSize, rotationAngle, middle);
 
         writer.writeEmptyElement(PATH_ELEMENT_NAME);
@@ -796,7 +799,7 @@ public class SvgWriter {
     private void drawHighlightVoltageLevelNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.VOLTAGE_LEVEL_NODES_CLASS);
-        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).collect(Collectors.toList())) {
+        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).toList()) {
             drawHighlightedNode(writer, vlNode);
         }
         writer.writeEndElement();
@@ -831,7 +834,7 @@ public class SvgWriter {
     }
 
     private String getTranslateString(Point point) {
-        return getTranslateString(point.getX(), point.getY());
+        return getTranslateString(point.x(), point.y());
     }
 
     private String getTranslateString(double x, double y) {
@@ -955,7 +958,7 @@ public class SvgWriter {
         Collections.sort(angles);
 
         // adding first angle to close the circle annulus, and adding 360° to keep the list ordered
-        angles.add(angles.get(0) + 2 * Math.PI);
+        angles.add(angles.getFirst() + 2 * Math.PI);
 
         double halfWidth = svgParameters.getNodeHollowWidth() / 2;
         double deltaAngle0 = halfWidth / outerRadius;
@@ -1052,7 +1055,7 @@ public class SvgWriter {
         writeId(writer, edge);
         List<Point> points = edge.getPoints();
         String lineFormatted1 = points.stream()
-                .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
+                .map(point -> getFormattedValue(point.x()) + "," + getFormattedValue(point.y()))
                 .collect(Collectors.joining(" "));
         writer.writeAttribute(POINTS_ATTRIBUTE, lineFormatted1);
     }
@@ -1094,21 +1097,12 @@ public class SvgWriter {
     private double[] getDiagramDimensions(Graph graph) {
         double width = getDiagramWidth(graph);
         double height = getDiagramHeight(graph);
-        double scale;
-        switch (svgParameters.getSizeConstraint()) {
-            case FIXED_WIDTH:
-                scale = svgParameters.getFixedWidth() / width;
-                break;
-            case FIXED_HEIGHT:
-                scale = svgParameters.getFixedHeight() / height;
-                break;
-            case FIXED_SCALE:
-                scale = svgParameters.getFixedScale();
-                break;
-            default:
-                scale = 1;
-                break;
-        }
+        double scale = switch (svgParameters.getSizeConstraint()) {
+            case FIXED_WIDTH -> svgParameters.getFixedWidth() / width;
+            case FIXED_HEIGHT -> svgParameters.getFixedHeight() / height;
+            case FIXED_SCALE -> svgParameters.getFixedScale();
+            default -> 1;
+        };
         return new double[] {width * scale, height * scale};
     }
 
