@@ -9,7 +9,9 @@ package com.powsybl.sld.layout.position;
 import com.powsybl.sld.model.coordinate.Side;
 import com.powsybl.sld.model.nodes.BusNode;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 /**
@@ -74,9 +76,9 @@ public class HorizontalBusList {
             return null;
         }
         if (side == Side.LEFT) {
-            return busNodes.get(0);
+            return busNodes.getFirst();
         }
-        return busNodes.get(busNodes.size() - 1);
+        return busNodes.getLast();
     }
 
     public int getStartingIndex() {
@@ -100,6 +102,6 @@ public class HorizontalBusList {
 
     @Override
     public String toString() {
-        return String.join(";", busNodes.stream().map(node -> node == null ? "null" : node.getId()).collect(Collectors.toList()));
+        return busNodes.stream().map(node -> node == null ? "null" : node.getId()).collect(Collectors.joining(";"));
     }
 }
