@@ -28,6 +28,7 @@ import com.powsybl.sld.svg.styles.StyleClassConstants;
 import com.powsybl.sld.svg.styles.StyleProvider;
 import com.powsybl.sld.util.IdUtil;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.commons.math3.util.Precision;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -125,11 +126,11 @@ public class DefaultSVGWriter implements SVGWriter {
     }
 
     private double getDiagramWidth(Graph graph, LayoutParameters layoutParameters) {
-        return graph.getWidth() + layoutParameters.getDiagramPadding().getLeft() + layoutParameters.getDiagramPadding().getRight();
+        return graph.getWidth() + layoutParameters.getDiagramPadding().left() + layoutParameters.getDiagramPadding().right();
     }
 
     private double getDiagramHeight(Graph graph, LayoutParameters layoutParameters) {
-        double height = graph.getHeight() + layoutParameters.getDiagramPadding().getTop() + layoutParameters.getDiagramPadding().getBottom();
+        double height = graph.getHeight() + layoutParameters.getDiagramPadding().top() + layoutParameters.getDiagramPadding().bottom();
         if (graph instanceof VoltageLevelGraph && svgParameters.isBusesLegendAdded()) {
             height += 6 * CIRCLE_RADIUS_NODE_INFOS_SIZE;
         }
@@ -143,31 +144,30 @@ public class DefaultSVGWriter implements SVGWriter {
             listUsedComponentSVG.add(n.getComponentType());
             List<LabelProvider.NodeDecorator> nodeDecorators = labelProvider.getNodeDecorators(n, graph.getDirection(n));
             if (nodeDecorators != null) {
-                nodeDecorators.forEach(nodeDecorator -> listUsedComponentSVG.add(nodeDecorator.getType()));
+                nodeDecorators.forEach(nodeDecorator -> listUsedComponentSVG.add(nodeDecorator.type()));
             }
         });
 
         Element style = document.createElement(STYLE);
         switch (svgParameters.getCssLocation()) {
-            case INSERTED_IN_SVG:
+            case INSERTED_IN_SVG -> {
                 String cssContent = CssUtil.getFilesContent(styleProvider.getCssUrls())
-                        + CssUtil.getFilesContent(componentLibrary.getCssUrls());
+                    + CssUtil.getFilesContent(componentLibrary.getCssUrls());
                 style.appendChild(document.createCDATASection(cssContent));
                 document.adoptNode(style);
                 document.getDocumentElement().appendChild(style);
-                break;
-            case EXTERNAL_IMPORTED:
+            }
+            case EXTERNAL_IMPORTED -> {
                 String cssImports = CssUtil.getImportCssString(styleProvider.getCssFilenames())
-                        + CssUtil.getImportCssString(componentLibrary.getCssFilenames());
+                    + CssUtil.getImportCssString(componentLibrary.getCssFilenames());
                 style.appendChild(document.createTextNode(cssImports));
                 document.adoptNode(style);
                 document.getDocumentElement().appendChild(style);
-                break;
-            case EXTERNAL_NO_IMPORT:
+            }
+            case EXTERNAL_NO_IMPORT -> {
                 // Nothing to do
-                break;
-            default:
-                throw new AssertionError("Unexpected CSS location: " + svgParameters.getCssLocation());
+            }
+            default -> throw new AssertionError("Unexpected CSS location: " + svgParameters.getCssLocation());
         }
     }
 
@@ -274,8 +274,8 @@ public class DefaultSVGWriter implements SVGWriter {
         drawEdges(g, graph, metadata, initProvider, styleProvider, edgesToDraw);
         drawNodes(g, graph, graph.getCoord(), metadata, initProvider, styleProvider, nodesToDraw);
 
-        remainingEdgesToDraw.removeAll(edgesToDraw);
-        remainingNodesToDraw.removeAll(nodesToDraw);
+        edgesToDraw.forEach(remainingEdgesToDraw::remove);
+        nodesToDraw.forEach(remainingNodesToDraw::remove);
 
         root.appendChild(g);
     }
@@ -308,7 +308,7 @@ public class DefaultSVGWriter implements SVGWriter {
         Element gridRoot = document.createElement(GROUP);
         String prefixId = metadata.getSvgParameters().getPrefixId();
 
-        String gridId = prefixId + "GRID_" + graph.getVoltageLevelInfos().getId();
+        String gridId = prefixId + "GRID_" + graph.getVoltageLevelInfos().id();
         gridRoot.setAttribute("id", IdUtil.escapeId(gridId));
         gridRoot.setAttribute(CLASS, StyleClassConstants.GRID_STYLE_CLASS);
 
@@ -338,7 +338,7 @@ public class DefaultSVGWriter implements SVGWriter {
         }
 
         metadata.addNodeMetadata(new GraphMetadata.NodeMetadata(null, gridId,
-                graph.getVoltageLevelInfos().getId(),
+                graph.getVoltageLevelInfos().id(),
                 null,
                 null,
                 false,
@@ -408,7 +408,7 @@ public class DefaultSVGWriter implements SVGWriter {
             root.appendChild(g);
 
             metadata.addNodeMetadata(
-                new GraphMetadata.NodeMetadata(null, nodeId, graph.getVoltageLevelInfos().getId(), null, BUSBAR_SECTION,
+                new GraphMetadata.NodeMetadata(null, nodeId, graph.getVoltageLevelInfos().id(), null, BUSBAR_SECTION,
                     false, UNDEFINED, false, busNode.getEquipmentId(), createNodeLabelMetadata(prefixId, busNode, nodeLabels)));
             if (metadata.getComponentMetadata(BUSBAR_SECTION) == null) {
                 metadata.addComponent(new SldComponent(BUSBAR_SECTION,
@@ -424,9 +424,9 @@ public class DefaultSVGWriter implements SVGWriter {
     protected List<GraphMetadata.NodeLabelMetadata> createNodeLabelMetadata(String prefixId, Node node, List<LabelProvider.NodeLabel> nodeLabels) {
         List<GraphMetadata.NodeLabelMetadata> labelsMetadata = new ArrayList<>();
         for (LabelProvider.NodeLabel nodeLabel : nodeLabels) {
-            LabelPosition labelPosition = nodeLabel.getPosition();
+            LabelPosition labelPosition = nodeLabel.position();
             String svgId = getNodeLabelId(prefixId, node, labelPosition);
-            labelsMetadata.add(new GraphMetadata.NodeLabelMetadata(svgId, labelPosition.getPositionName(), nodeLabel.getUserDefinedId()));
+            labelsMetadata.add(new GraphMetadata.NodeLabelMetadata(svgId, labelPosition.positionName(), nodeLabel.userDefinedId()));
         }
         return labelsMetadata;
     }
@@ -466,17 +466,16 @@ public class DefaultSVGWriter implements SVGWriter {
 
     protected void setMetadata(GraphMetadata metadata, Node node, String nodeEscapedId, BaseGraph graph, Direction direction, List<LabelProvider.NodeLabel> nodeLabels) {
         String nextVId = null;
-        if (node instanceof FeederNode && ((FeederNode) node).getFeeder() instanceof FeederWithSides) {
-            FeederWithSides feederWs = (FeederWithSides) ((FeederNode) node).getFeeder();
+        if (node instanceof FeederNode feederNode && feederNode.getFeeder() instanceof FeederWithSides feederWs) {
             VoltageLevelInfos otherSideVoltageLevelInfos = feederWs.getOtherSideVoltageLevelInfos();
             if (otherSideVoltageLevelInfos != null) {
-                nextVId = otherSideVoltageLevelInfos.getId();
+                nextVId = otherSideVoltageLevelInfos.id();
             }
         }
 
         String prefixId = metadata.getSvgParameters().getPrefixId();
 
-        String vId = graph instanceof VoltageLevelGraph ? ((VoltageLevelGraph) graph).getVoltageLevelInfos().getId() : "";
+        String vId = graph instanceof VoltageLevelGraph voltageLevelGraph ? voltageLevelGraph.getVoltageLevelInfos().id() : "";
 
         boolean isOpen = node.getType() == NodeType.SWITCH && ((SwitchNode) node).isOpen();
 
@@ -500,8 +499,8 @@ public class DefaultSVGWriter implements SVGWriter {
     protected void drawNodeLabel(String prefixId, Element g, Node node, List<LabelProvider.NodeLabel> nodeLabels) {
         for (LabelProvider.NodeLabel nodeLabel : nodeLabels) {
 
-            LabelPosition labelPosition = nodeLabel.getPosition();
-            Element label = createLabelElement(nodeLabel.getLabel(), labelPosition.getdX(), labelPosition.getdY(), labelPosition.getShiftAngle(), g);
+            LabelPosition labelPosition = nodeLabel.position();
+            Element label = createLabelElement(nodeLabel.label(), labelPosition.dX(), labelPosition.dY(), labelPosition.shiftAngle(), g);
             String svgId = getNodeLabelId(prefixId, node, labelPosition);
             label.setAttribute("id", IdUtil.escapeId(svgId));
             if (labelPosition.isCentered()) {
@@ -526,21 +525,21 @@ public class DefaultSVGWriter implements SVGWriter {
      */
     protected void drawGraphLabel(Element root, VoltageLevelGraph graph, GraphMetadata metadata) {
         // drawing the label of the voltageLevel
-        String unescapedId = metadata.getSvgParameters().getPrefixId() + "LABEL_VL_" + graph.getVoltageLevelInfos().getId();
+        String unescapedId = metadata.getSvgParameters().getPrefixId() + "LABEL_VL_" + graph.getVoltageLevelInfos().id();
         String idLabelVoltageLevel = IdUtil.escapeId(unescapedId);
         Element gLabel = root.getOwnerDocument().createElement(GROUP);
         gLabel.setAttribute("id", idLabelVoltageLevel);
 
         double yPos = graph.getY() - 24.;
 
-        String graphName = svgParameters.isUseName() ? graph.getVoltageLevelInfos().getName() : graph.getVoltageLevelInfos().getId();
+        String graphName = svgParameters.isUseName() ? graph.getVoltageLevelInfos().name() : graph.getVoltageLevelInfos().id();
         Element label = createLabelElement(graphName, graph.getX(), yPos, 0, gLabel);
         label.setAttribute(CLASS, StyleClassConstants.GRAPH_LABEL_STYLE_CLASS);
         gLabel.appendChild(label);
         root.appendChild(gLabel);
 
         metadata.addNodeMetadata(new GraphMetadata.NodeMetadata(unescapedId, idLabelVoltageLevel,
-                graph.getVoltageLevelInfos().getId(),
+                graph.getVoltageLevelInfos().id(),
                 null,
                 null,
                 false,
@@ -618,8 +617,8 @@ public class DefaultSVGWriter implements SVGWriter {
         componentLibrary.getSubComponentStyleClass(infoType, subComponent).ifPresent(style -> e.setAttribute(CLASS, style));
         if (Math.abs(angle) > 0) {
             ComponentSize componentSize = componentLibrary.getSize(infoType);
-            double cx = componentSize.getWidth() / 2;
-            double cy = componentSize.getHeight() / 2;
+            double cx = componentSize.width() / 2;
+            double cy = componentSize.height() / 2;
             e.setAttribute(TRANSFORM, ROTATE + "(" + angle + "," + cx + "," + cy + ")");
         }
     }
@@ -628,7 +627,7 @@ public class DefaultSVGWriter implements SVGWriter {
                                                      Element g, Graph graph, Node node, StyleProvider styleProvider) {
         BiConsumer<Element, String> elementAttributesSetter
                 = (elt, subComponent) -> setDecoratorAttributes(prefixId, g, graph, node, nodeDecorator, styleProvider, elt, subComponent);
-        String nodeDecoratorType = nodeDecorator.getType();
+        String nodeDecoratorType = nodeDecorator.type();
         insertSVGIntoDocumentSVG(nodeDecoratorType, g, null, elementAttributesSetter);
     }
 
@@ -686,20 +685,15 @@ public class DefaultSVGWriter implements SVGWriter {
         SldComponent.Transformation transformation = componentLibrary.getTransformations(node.getComponentType()).get(nodeOrientation);
         if (transformation != null) {
             switch (transformation) {
-                case ROTATION: {
-                    elt.setAttribute(TRANSFORM, ROTATE + "(" + nodeOrientation.toRotationAngle() + "," + size.getWidth() / 2 + "," + size.getHeight() / 2 + ")");
-                    break;
-                }
-                case FLIP: {
+                case ROTATION -> elt.setAttribute(TRANSFORM, ROTATE + "(" + nodeOrientation.toRotationAngle() + "," + size.width() / 2 + "," + size.height() / 2 + ")");
+                case FLIP -> {
                     if (nodeOrientation.isVertical()) {
-                        elt.setAttribute(TRANSFORM, SCALE + "(1, -1)" + " " + TRANSLATE + "(0, " + -size.getHeight() + ")");
+                        elt.setAttribute(TRANSFORM, SCALE + "(1, -1)" + " " + TRANSLATE + "(0, " + -size.height() + ")");
                     } else {
-                        elt.setAttribute(TRANSFORM, SCALE + "(-1, 1)" + " " + TRANSLATE + "(" + -size.getWidth() + ", 0)");
+                        elt.setAttribute(TRANSFORM, SCALE + "(-1, 1)" + " " + TRANSLATE + "(" + -size.width() + ", 0)");
                     }
-                    break;
                 }
-                case NONE:
-                default: {
+                default -> {
                     // No transformation
                 }
             }
@@ -714,11 +708,11 @@ public class DefaultSVGWriter implements SVGWriter {
     private void setDecoratorAttributes(String prefixId, Element g, Graph graph, Node node, LabelProvider.NodeDecorator nodeDecorator,
                                         StyleProvider styleProvider, Element elt, String subComponentName) {
         replaceId(g, elt, prefixId);
-        ComponentSize decoratorSize = componentLibrary.getSize(nodeDecorator.getType());
-        LabelPosition decoratorPosition = nodeDecorator.getPosition();
+        ComponentSize decoratorSize = componentLibrary.getSize(nodeDecorator.type());
+        LabelPosition decoratorPosition = nodeDecorator.position();
         elt.setAttribute(TRANSFORM, getTransformStringDecorator(node, decoratorPosition, decoratorSize));
         writeStyleClasses(elt, styleProvider.getNodeSubcomponentStyles(graph, node, subComponentName),
-                componentLibrary.getSubComponentStyleClass(nodeDecorator.getType(), subComponentName).orElse(null));
+                componentLibrary.getSubComponentStyleClass(nodeDecorator.type(), subComponentName).orElse(null));
     }
 
     /**
@@ -733,18 +727,18 @@ public class DefaultSVGWriter implements SVGWriter {
         // the id is set only if elt had already an id
         if (nodeId != null) {
             String nodeIdValue = nodeId.getTextContent();
-            String gIdValue = StringUtils.removeStart(g.getAttribute("id"), prefixId);
+            String gIdValue = Strings.CS.removeStart(g.getAttribute("id"), prefixId);
             nodeId.setTextContent(prefixId + gIdValue + "_" + nodeIdValue);
         }
     }
 
     private String getTransformStringDecorator(Node node, LabelPosition decoratorPosition, ComponentSize decoratorSize) {
         ComponentSize componentSize = componentLibrary.getSize(node.getComponentType());
-        double dX = componentSize.getWidth() / 2 + decoratorPosition.getdX();
-        double dY = componentSize.getHeight() / 2 + decoratorPosition.getdY();
+        double dX = componentSize.width() / 2 + decoratorPosition.dX();
+        double dY = componentSize.height() / 2 + decoratorPosition.dY();
         if (decoratorPosition.isCentered()) {
-            dX -= decoratorSize.getWidth() / 2;
-            dY -= decoratorSize.getHeight() / 2;
+            dX -= decoratorSize.width() / 2;
+            dY -= decoratorSize.height() / 2;
         }
         return TRANSLATE + "(" + dX + "," + dY + ")";
     }
@@ -756,8 +750,8 @@ public class DefaultSVGWriter implements SVGWriter {
 
     private double[] getNodeTranslate(Node node, Point shift) {
         ComponentSize componentSize = componentLibrary.getSize(node.getComponentType());
-        double translateX = node.getX() + shift.getX() - componentSize.getWidth() / 2;
-        double translateY = node.getY() + shift.getY() - componentSize.getHeight() / 2;
+        double translateX = node.getX() + shift.getX() - componentSize.width() / 2;
+        double translateY = node.getY() + shift.getY() - componentSize.height() / 2;
         return new double[] {translateX, translateY};
     }
 
@@ -768,9 +762,9 @@ public class DefaultSVGWriter implements SVGWriter {
 
         // Case of wires with non-direct straight lines: if wire distance between first 2 points is too small to display
         // the feeder info, checks if the distance between the 2nd and the 3rd points is big enough
-        if (points.size() > 2 && distancePoints < 3 * componentSize.getHeight()) {
+        if (points.size() > 2 && distancePoints < 3 * componentSize.height()) {
             double distancePoints23 = points.get(1).distance(points.get(2));
-            if (distancePoints23 > 3 * componentSize.getHeight()) {
+            if (distancePoints23 > 3 * componentSize.height()) {
                 distancePoints = distancePoints23;
                 pointA = points.get(1);
                 pointB = points.get(2);
@@ -798,11 +792,11 @@ public class DefaultSVGWriter implements SVGWriter {
 
     private String getTransformString(double centerPosX, double centerPosY, double angle, ComponentSize componentSize) {
         if (angle == 0) {
-            double translateX = centerPosX - componentSize.getWidth() / 2;
-            double translateY = centerPosY - componentSize.getHeight() / 2;
+            double translateX = centerPosX - componentSize.width() / 2;
+            double translateY = centerPosY - componentSize.height() / 2;
             return TRANSLATE + "(" + translateX + "," + translateY + ")";
         } else {
-            double[] matrix = getTransformMatrix(componentSize.getWidth(), componentSize.getHeight(), angle,
+            double[] matrix = getTransformMatrix(componentSize.width(), componentSize.height(), angle,
                 centerPosX, centerPosY);
             return transformMatrixToString(matrix, 4);
         }
@@ -851,7 +845,7 @@ public class DefaultSVGWriter implements SVGWriter {
             drawFeederInfo(prefixId, feederNode, points, root, feederInfo, shiftFeederInfo, metadata, styleProvider);
             addInfoComponentMetadata(metadata, feederInfo.getComponentType());
 
-            double height = componentLibrary.getSize(feederInfo.getComponentType()).getHeight();
+            double height = componentLibrary.getSize(feederInfo.getComponentType()).height();
             shiftFeederInfo += svgParameters.getFeederInfosIntraMargin() + height;
         }
     }
@@ -873,8 +867,8 @@ public class DefaultSVGWriter implements SVGWriter {
         Element g = root.getOwnerDocument().createElement(GROUP);
         ComponentSize size = componentLibrary.getSize(feederInfo.getComponentType());
 
-        double shX = size.getWidth() + LABEL_OFFSET;
-        double shY = size.getHeight() / 2;
+        double shX = size.width() + LABEL_OFFSET;
+        double shY = size.height() / 2;
 
         transformFeederInfo(points, size, shift, g);
 
@@ -923,8 +917,8 @@ public class DefaultSVGWriter implements SVGWriter {
         // Position
         ComponentSize size = componentLibrary.getSize(busInfo.getComponentType());
         double shiftX = svgParameters.getBusInfoMargin();
-        double dy = -size.getHeight() / 2;
-        double dx = busInfo.getAnchor() == Side.RIGHT ? busNode.getPxWidth() - shiftX - size.getWidth() : shiftX;
+        double dy = -size.height() / 2;
+        double dx = busInfo.getAnchor() == Side.RIGHT ? busNode.getPxWidth() - shiftX - size.width() : shiftX;
         g.setAttribute(TRANSFORM, TRANSLATE + "(" + dx + "," + dy + ")");
 
         // Styles
@@ -940,7 +934,7 @@ public class DefaultSVGWriter implements SVGWriter {
 
         // Append indicator to SVG
         insertBusInfoSVGIntoDocumentSVG(busInfo, prefixId, g);
-        double shY = size.getHeight() + LABEL_OFFSET;
+        double shY = size.height() + LABEL_OFFSET;
 
         // We draw the bottom label only if present
         busInfo.getBottomLabel().ifPresent(s -> {
@@ -966,7 +960,7 @@ public class DefaultSVGWriter implements SVGWriter {
     }
 
     private static String getNodeLabelId(String prefixId, Node node, LabelPosition labelPosition) {
-        return prefixId + node.getId() + "_" + labelPosition.getPositionName();
+        return prefixId + node.getId() + "_" + labelPosition.positionName();
     }
 
     /*
@@ -974,7 +968,7 @@ public class DefaultSVGWriter implements SVGWriter {
      */
     protected void drawEdges(Element root, VoltageLevelGraph graph, GraphMetadata metadata,
                              LabelProvider initProvider, StyleProvider styleProvider, Collection<Edge> edges) {
-        String voltageLevelId = graph.getVoltageLevelInfos().getId();
+        String voltageLevelId = graph.getVoltageLevelInfos().id();
         String prefixId = metadata.getSvgParameters().getPrefixId();
 
         for (Edge edge : edges) {
@@ -1080,7 +1074,7 @@ public class DefaultSVGWriter implements SVGWriter {
      */
     private void adaptCoordSnakeLine(BranchEdge edge, List<Point> pol, Graph graph) {
         // Getting the right polyline point from where we need to compute the best anchor point
-        Point multiTermPoint = pol.get(pol.size() - 1);
+        Point multiTermPoint = pol.getLast();
         Point pointBeforeNode = pol.get(Math.max(pol.size() - 2, 0));
 
         AnchorPoint bestAnchorPoint = WireConnection.getBestAnchorPoint(componentLibrary, graph, edge.getNode2(), pointBeforeNode);
@@ -1168,8 +1162,8 @@ public class DefaultSVGWriter implements SVGWriter {
         root.appendChild(legendRootElement);
         legendRootElement.setAttribute(CLASS, StyleClassConstants.LEGEND);
 
-        double yPos = graph.getY() - layoutParameters.getVoltageLevelPadding().getTop() + graph.getHeight() + CIRCLE_RADIUS_NODE_INFOS_SIZE;
-        double xPos = graph.getX() + layoutParameters.getDiagramPadding().getLeft() + CIRCLE_RADIUS_NODE_INFOS_SIZE;
+        double yPos = graph.getY() - layoutParameters.getVoltageLevelPadding().top() + graph.getHeight() + CIRCLE_RADIUS_NODE_INFOS_SIZE;
+        double xPos = graph.getX() + layoutParameters.getDiagramPadding().left() + CIRCLE_RADIUS_NODE_INFOS_SIZE;
 
         legendWriter.drawLegend(graph, metadata, styleProvider, legendRootElement, xPos, yPos);
     }
